// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expandCollapsedBlockBy > basic 1`] = `
[
  {
    "changes": [
      {
        "content": "    test('App renders correctly', () => {",
        "isNormal": true,
        "newLineNumber": 21,
        "oldLineNumber": 21,
        "type": "normal",
      },
      {
        "content": "        expect(renderer.create(<App diffText={'deff'} />).toJSON()).toMatchSnapshot();",
        "isDelete": true,
        "lineNumber": 22,
        "type": "delete",
      },
      {
        "content": "        expect(renderer.create(<App diffText={'diff'} />).toJSON()).toMatchSnapshot();",
        "isInsert": true,
        "lineNumber": 22,
        "type": "insert",
      },
      {
        "content": "    });",
        "isNormal": true,
        "newLineNumber": 23,
        "oldLineNumber": 23,
        "type": "normal",
      },
    ],
    "content": "@@ -21,3 +21,3 @@ describe('basic test', () => {",
    "isPlain": false,
    "newLines": 3,
    "newStart": 21,
    "oldLines": 3,
    "oldStart": 21,
  },
]
`;

exports[`expandCollapsedBlockBy > normal hunk 1`] = `
[
  {
    "changes": [
      {
        "content": "iiiiiiiiiiiiiiiiiiiiii:WQiiiiiiiiiiiiejj",
        "isNormal": true,
        "newLineNumber": 1,
        "oldLineNumber": 1,
        "type": "normal",
      },
      {
        "content": "dsds",
        "isDelete": true,
        "lineNumber": 2,
        "type": "delete",
      },
      {
        "content": "dsdsds",
        "isInsert": true,
        "lineNumber": 2,
        "type": "insert",
      },
    ],
    "content": "@@ -1,2 +1,2 @@",
    "newLines": 2,
    "newStart": 1,
    "oldLines": 2,
    "oldStart": 1,
  },
]
`;

exports[`expandCollapsedBlockBy > normal hunk 2`] = `
[
  {
    "changes": [
      {
        "content": "iiiiiiiiiiiiiiiiiiiiii:WQiiiiiiiiiiiiejj",
        "isNormal": true,
        "newLineNumber": 1,
        "oldLineNumber": 1,
        "type": "normal",
      },
      {
        "content": "dsds",
        "isDelete": true,
        "lineNumber": 2,
        "type": "delete",
      },
      {
        "content": "dsdsds",
        "isInsert": true,
        "lineNumber": 2,
        "type": "insert",
      },
    ],
    "content": "@@ -1,2 +1,2 @@",
    "newLines": 2,
    "newStart": 1,
    "oldLines": 2,
    "oldStart": 1,
  },
]
`;

exports[`expandCollapsedBlockBy > normal hunk 3`] = `
[
  {
    "changes": [
      {
        "content": "iiiiiiiiiiiiiiiiiiiiii:WQiiiiiiiiiiiiejj",
        "isNormal": true,
        "newLineNumber": 0,
        "oldLineNumber": 0,
        "type": "normal",
      },
      {
        "content": "iiiiiiiiiiiiiiiiiiiiii:WQiiiiiiiiiiiiejj",
        "isNormal": true,
        "newLineNumber": 1,
        "oldLineNumber": 1,
        "type": "normal",
      },
      {
        "content": "dsds",
        "isDelete": true,
        "lineNumber": 2,
        "type": "delete",
      },
      {
        "content": "dsdsds",
        "isInsert": true,
        "lineNumber": 2,
        "type": "insert",
      },
    ],
    "content": "@@ -0,3 +0,3",
    "isPlain": false,
    "newLines": 3,
    "newStart": 0,
    "oldLines": 3,
    "oldStart": 0,
  },
]
`;

exports[`expandFromRawCode > basic 1`] = `
[
  {
    "changes": [
      {
        "content": "    test('App renders correctly', () => {",
        "isNormal": true,
        "newLineNumber": 21,
        "oldLineNumber": 21,
        "type": "normal",
      },
      {
        "content": "        expect(renderer.create(<App diffText={'deff'} />).toJSON()).toMatchSnapshot();",
        "isDelete": true,
        "lineNumber": 22,
        "type": "delete",
      },
      {
        "content": "        expect(renderer.create(<App diffText={'diff'} />).toJSON()).toMatchSnapshot();",
        "isInsert": true,
        "lineNumber": 22,
        "type": "insert",
      },
      {
        "content": "    });",
        "isNormal": true,
        "newLineNumber": 23,
        "oldLineNumber": 23,
        "type": "normal",
      },
    ],
    "content": "@@ -21,3 +21,3 @@ describe('basic test', () => {",
    "isPlain": false,
    "newLines": 3,
    "newStart": 21,
    "oldLines": 3,
    "oldStart": 21,
  },
]
`;

exports[`textLinesToHunk > basic 1`] = `
{
  "changes": [
    {
      "content": "",
      "isNormal": true,
      "newLineNumber": 0,
      "oldLineNumber": 0,
      "type": "normal",
    },
  ],
  "content": "@@ -0,1 +0,1",
  "isPlain": true,
  "newLines": 1,
  "newStart": 0,
  "oldLines": 1,
  "oldStart": 0,
}
`;
